Add transactions, switch to openjdk11